docs: rework repo into a structured Java Fundamentals handbook
- conspectus README per chapter: theory notes, file map, pitfalls
- root README: handbook cover with table of contents and legend
- Dutch teaching comments across all examples; IDE template junk removed
- bug/typo fixes in examples (non-compiling classes, wrong prompts, dead code)
- gap-filling examples per chapter under extra/ (IO, enums, protected/final, etc.)
- ervaringsweek: Snake game properly named and commented